# bead

./: .envrc  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  __main__.py  appveyor.yml  pyproject.toml  requirements.txt  sqlite-index-aider.md  test_requirements.txt  tracelog.py
.github/: pull_request_template.md
.github/workflows/: release.yml  test.yml
bead/: archive.py  bead.py  box.py  box_index.py  box_query.py  box_rawfs.py  exceptions.py  layouts.py  meta.py  spec.py  test_box.py  test_box_index.py  test_workspace.py  test_ziparchive.py  workspace.py  ziparchive.py  zipopener.py
bead/tech/: __init__.py  fs.py  identifier.py  test_fs.py  test_persistence.py  test_timestamp.py  timestamp.py
bead_cli/: box.py  cmdparse.py  common.py  conftest.py  environment.py  input.py  main.py  test_basic_usage.py  test_box_commands.py  test_develop_command.py  test_discard_command.py  test_edit_command.py  test_feature_content_id_loading.py  test_feature_update_by_name.py  test_input_commands.py  test_new_command.py  test_robot.py  test_save_command.py  test_status_command.py  test_web_command.py  test_zap_command.py  workspace.py
bead_cli/web/: cluster.py  commands.py  dummy.py  graph.py  graphviz.py  io.py  sketch.py
dev/: Containerfile  build.py  pyright  test  typecheck  vm
doc/: usecases.md  usecases2.md
tests/: sketcher.py
tests/web/: test_closure.py  test_colors.py  test_drop_deleted_inputs.py  test_io.py
