[project]
name = "bead"
version = "0.9.0.dev2"
description = "Linked frozen computations"
authors = [{name = "Krisztián Fekete", email = "e3krisztian+bead@gmail.com"}]
license = {text = "The Unlicense"}
requires-python = ">=3.10"
readme = "README.md"
homepage = "https://github.com/e3krisztian/bead"
repository = "https://github.com/e3krisztian/bead"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
keywords = ["computation", "reproducible", "data", "pipeline", "freeze"]
dependencies = [
    "appdirs",
    "argcomplete>=3.6.2",
    "attrs",
    "cached-property",
]

[project.scripts]
bead = 'bead_cli.main:main'

[dependency-groups]
dev = [
    # tests
    "freezegun",
    "pytest",
    "pytest-cov",

    # debug
    "pysnooper",

    # build
    "pip>=25.1.1",
    "build",
    "twine",

    # hygiene
    "mypy",
    "pre-commit",
    "ruff",
    "flake8",
    "pytype>=2024.10.11",
]

[tool.flake8]
line_length= 120

[tool.isort]
force_single_line=true
force_sort_within_sections=true
lexicographical=true
order_by_type=true
group_by_package=true

[tool.pyright]
reportUnusedCallResult = false
reportUnknownParameterType = false
reportUnknownVariableType = false
exclude = [
    "executables/**",
    ".pytype/**",
    ".cache/**",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["bead", "bead_cli", "tracelog.py"]
exclude = ["**/test_*.py"]

[tool.hatch.build.targets.sdist]
only-include = ["bead", "bead_cli", "__main__.py", "tracelog.py", "tests", "README.md", "pyproject.toml"]
